--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body{font-size: 16px; font-family:var(--ff);}
 .justify-evn{ justify-content: space-evenly;}
 .justify-center{ justify-content: center;}
 .align-center{ align-items: center;}
+.mb{margin-bottom: 1.5rem;}
 
 
 .btn{border: none; border-radius: 10px; padding: 0.75rem 1.5rem; font: medium 1rem var(--ff);}
